--- a/android/build.gradle
+++ b/android/build.gradle
@@ -28,7 +28,7 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
-
-task wrapper(type: Wrapper){
-    gradleVersion = '8.6'
-}
+//
+//task wrapper(type: Wrapper){
+//    gradleVersion = '8.6'
+//}
