--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: bloc_boiler_plate
+name: getx_boiler_plate
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -37,7 +37,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_bloc: ^8.1.3
   equatable: ^2.0.5
   dio: ^5.4.0
   intl: ^0.18.1
@@ -46,6 +45,8 @@ dependencies:
   shared_preferences: ^2.2.2
   cached_network_image: ^3.3.1
   flutter_svg: ^2.0.9
+  get: ^4.6.6
+
 
 dev_dependencies:
   flutter_test:
