--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "bloc_boiler_plate" "\0"
+            VALUE "FileDescription", "getx_boiler_plate" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "bloc_boiler_plate" "\0"
+            VALUE "InternalName", "getx_boiler_plate" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "bloc_boiler_plate.exe" "\0"
-            VALUE "ProductName", "bloc_boiler_plate" "\0"
+            VALUE "OriginalFilename", "getx_boiler_plate.exe" "\0"
+            VALUE "ProductName", "getx_boiler_plate" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
